fixed word-overflow in review

--- a/frontend/src/components/ItemReviews/ItemReviews.css
+++ b/frontend/src/components/ItemReviews/ItemReviews.css
@@ -89,3 +89,7 @@
     background-color: rgb(20, 108, 148);
     color: rgb(246, 241, 241);
 }
+
+.review-review {
+    word-wrap: break-word;
+}
